Realigned CTA button after font corrections

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -189,7 +189,7 @@ header h1 {
     right: 20%;
     background-color: var(--Primary-Color);
     color: white;
-    padding: 1rem 2rem;
+    padding: 1rem 5rem 1rem 2rem;
     border: none;
     border-radius: 5px;
     font-size: 1.2rem;
